# monorepo-agentic-chat-template

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  langgraph.json  pyproject.toml
.github/workflows/: pr.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/src/backend/: run_agent.py  run_api.py
apps/backend/src/backend/agents/: __init__.py  main.py
apps/backend/src/backend/agents/example/: __init__.py  main.py  react_agent.py
apps/backend/src/backend/api/: main.py
apps/backend/src/backend/memory/: __init__.py  mongodb.py  postgres.py  sqlite.py
apps/frontend/: Dockerfile  pyproject.toml
apps/frontend/src/frontend/: run_app.py  streamlit_app.py
apps/frontend/src/frontend/client/: __init__.py  main.py
apps/fullstack/: Dockerfile  pyproject.toml
apps/fullstack/src/fullstack/: start.sh
libs/shared/: pyproject.toml
libs/shared/src/shared/core/: __init__.py  llm.py  settings.py
libs/shared/src/shared/schema/: __init__.py  models.py  schema.py
