[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arthur D. Delevedove", email = "arthurdorigueto@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "shared",
    "streamlit>=1.47.1",
]

[dependency-groups]
dev = [
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[project.scripts]
run_app = "frontend.run_app:main"

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
