[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arthur D. Delevedove", email = "arthurdorigueto@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=0.3.18",
    "langchain-aws>=0.2.30",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-google-vertexai>=2.0.27",
    "langchain-groq>=0.3.6",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
]

[dependency-groups]
dev = [
    "poethepoet>0",
    "pytest>0",
    "ruff>0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
